[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Hack-Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Montserrat-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.134937, 0.129135, 0.152344, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 38.0
margin_right = -9.99994
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="TabContainer" parent="HSplitContainer"]
margin_right = 250.0
margin_bottom = 552.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recents" type="VBoxContainer" parent="HSplitContainer/Sidebar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HSplitContainer/Sidebar/Recents"]
margin_right = 242.0
margin_bottom = 32.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Clear Recents"

[node name="Recents" type="VBoxContainer" parent="HSplitContainer/Sidebar/Recents"]
margin_top = 36.0
margin_right = 242.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="HSplitContainer/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 6 )

[node name="DrawTabs" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_right = 242.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/DrawTabs"]
margin_top = 11.0
margin_right = 162.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Draw Tabs"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/DrawTabs"]
margin_left = 166.0
margin_right = 242.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="DrawSpaces" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 44.0
margin_right = 242.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/DrawSpaces"]
margin_top = 11.0
margin_right = 162.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Draw Spaces"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/DrawSpaces"]
margin_left = 166.0
margin_right = 242.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0

[node name="HighlightCurrent" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 88.0
margin_right = 242.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/HighlightCurrent"]
margin_top = 11.0
margin_right = 162.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Highlight Current Line"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/HighlightCurrent"]
margin_left = 166.0
margin_right = 242.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="Caret" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 132.0
margin_right = 242.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/Caret"]
margin_top = 11.0
margin_right = 162.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Caret Block Mode"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/Caret"]
margin_left = 166.0
margin_right = 242.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0

[node name="TextEdit" type="TextEdit" parent="HSplitContainer"]
margin_left = 262.0
margin_right = 1004.0
margin_bottom = 552.0
rect_min_size = Vector2( 650, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -289.0
margin_top = -185.5
margin_right = 289.0
margin_bottom = 185.5
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "C:/Users"
current_path = "C:/Users/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.099
margin_top = -203.584
margin_right = 305.901
margin_bottom = 204.416
popup_exclusive = true
resizable = true
access = 2
current_dir = "C:/Users"
current_path = "C:/Users/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="Menu"]
margin_right = 47.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "File"
items = [ "Open File", null, 0, false, false, 0, 0, null, "", false, "Save As File", null, 0, false, false, 1, 0, null, "", false, "Save File", null, 0, false, false, 4, 0, null, "", false, "New File", null, 0, false, false, 3, 0, null, "", false, "Quit", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMenu" type="MenuButton" parent="Menu"]
margin_left = 51.0
margin_right = 110.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Help"
items = [ "About", null, 0, false, false, 0, 0, null, "", false, "Github", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -159.5
margin_right = 261.5
margin_bottom = 159.5
custom_fonts/title_font = SubResource( 1 )
popup_exclusive = true
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutPopup"]
margin_right = 523.0
margin_bottom = 317.0
custom_fonts/font = ExtResource( 2 )
text = "Signum
-
Open-source text editor made with Godot!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HSplitContainer/Sidebar/Recents/Button" to="." method="clear_recents"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/DrawTabs/CheckButton" to="HSplitContainer/Sidebar/Settings" method="draw_tabs_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/DrawSpaces/CheckButton" to="HSplitContainer/Sidebar/Settings" method="draw_spaces_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/HighlightCurrent/CheckButton" to="HSplitContainer/Sidebar/Settings" method="highlight_current_line_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/Caret/CheckButton" to="HSplitContainer/Sidebar/Settings" method="caret_toggled"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="open_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="save_as_file_selected"]
